# libjuno

./: .gitignore  .gitmodules  .mcp.json  01-overview_8md.html  01-udp-module_8md.html  02-thread-module_8md.html  02-udp-module_8md.html  03-integration_8md.html  03-thread-module_8md.html  04-applications_8md.html  05-composition-root_8md.html  CLAUDE.md  CMakeLists.txt  Doxyfile.in  LICENSE  LibJuno__Tutorial_8md.html  MANIFESTO.md  MINIMAL__QUEUE__EXAMPLE_8md.html  MODULE_8md.html  README.md  README_8md.html  alloc_8h.html  alloc_8h.js  alloc_8h__dep__incl.dot  alloc_8h__incl.dot  alloc_8h_source.html  annotated.html  annotated_dup.js  app__api_8h.html  app__api_8h.js  app__api_8h__dep__incl.dot  app__api_8h__incl.dot  app__api_8h_source.html  arc_8h.html  arc_8h.js  arc_8h__dep__incl.dot  arc_8h__incl.dot  arc_8h_source.html  array__api_8h.html  array__api_8h.js  (+1289 more)
.claude/: settings.json
.claude/agents/: final-quality-engineer.md  junior-software-developer.md  senior-software-engineer.md  software-developer.md  software-lead.md  software-quality-engineer.md  software-requirements-engineer.md  software-systems-engineer.md  software-test-engineer.md  software-verification-engineer.md
.claude/commands/: final-quality.md  software-lead.md  verify.md  worker.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: code-review.agent.md  derive-requirements.agent.md  final-quality-engineer.agent.md  generate-docs.agent.md  generate-sdd.agent.md  improve-docs.agent.md  junior-software-dev.agent.md  junior-software-developer.agent.md  paired-design.agent.md  paired-developer.agent.md  paired-requirements.agent.md  paired-tester.agent.md  senior-software-engineer.agent.md  software-developer.agent.md  software-lead.agent.md  software-quality-engineer.agent.md  software-requirements-engineer.agent.md  software-systems-engineer.agent.md  software-test-engineer.agent.md  software-verification-engineer.agent.md  systems-engineer.agent.md  trace-check.agent.md  write-code.agent.md  write-design.agent.md  write-module.agent.md  (+2 more)
cmake/: junoConfig.cmake.in
docs/: header.html
examples/: CMakeLists.txt  MINIMAL_QUEUE_EXAMPLE.md  README.md  di_example.c  example  example_sb.c  example_state_machine.c  memory_example.c  minimal_memory_example.c  minimal_queue_example.c
examples/example_project/: CMakeLists.txt  LibJuno Tutorial.md  LibJuno_Tutorial.md  main.c  tutorial.json
examples/example_project/engine/: CMakeLists.txt
examples/example_project/engine/include/engine_app/: ENGINE_APP.md  ENGINE_CMD_MSG.md  engine_app.h  engine_cmd_msg.h  engine_cmd_msg_pipe.h  engine_tlm_msg.h
examples/example_project/engine/src/: engine_app.c  engine_cmd_msg.c  engine_cmd_msg_pipe.c  engine_tlm_msg.c
examples/example_project/system_manager/: CMakeLists.txt
examples/example_project/system_manager/include/system_manager_app/: engine_tlm_msg_pipe.h  system_manager_app.h
examples/example_project/system_manager/src/: engine_tlm_msg_pipe.c  system_manager_app.c
examples/udp-threads/: CMakeLists.txt
examples/udp-threads/docs/design/: 01-overview.md  02-udp-module.md  03-thread-module.md  04-applications.md  05-composition-root.md  index.md
examples/udp-threads/docs/test-cases/: 01-udp-module.md  02-thread-module.md  03-integration.md  index.md
examples/udp-threads/extension-report/: report_1.md  report_2.md  report_3.md  report_4.md
examples/udp-threads/include/: monitor_app.h  processor_app.h  sender_app.h  udp_api.h  udp_bridge_app.h  udp_linux.h  udp_msg_api.h
examples/udp-threads/include/juno/: thread.h  thread_api.h  thread_linux.h
examples/udp-threads/requirements/app/: requirements.json
examples/udp-threads/requirements/thread/: requirements.json
examples/udp-threads/requirements/udp/: requirements.json
examples/udp-threads/src/: juno_thread_init.cpp  juno_udp_init.cpp  linux_thread_impl.cpp  linux_udp_impl.cpp  main.cpp  monitor_app.cpp  processor_app.cpp  sender_app.cpp  udp_bridge_app.cpp  udp_thread_msg.cpp
examples/udp-threads/tests/: test_apps.cpp  test_thread_module.cpp  test_udp_module.cpp
juno_memory/: CMakeLists.txt
scripts/: add_copyright_notice.py  create_app.py  create_array.py  create_impl.py  create_lib.py  create_msg.py  extract_docs.py  generate_docs.py  increase_version.py  verify_traceability.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  (+114 more)
src/: juno.c  juno_arc.c  juno_binhex.c  juno_broker.c  juno_buff_queue.c  juno_buff_stack.c  juno_ccitt.c  juno_ccitt32.c  juno_crc.c  juno_hash.c  juno_heap.c  juno_kermit.c  juno_map.c  juno_memory.c  juno_memory_block.c  juno_sb.c  juno_sm.c  juno_string.c  juno_time.c  juno_zip.c  string.c
templates/template_app/: CMakeLists.txt
templates/template_app/include/template/: template_app.h
templates/template_app/include/template_app/: template_app.h  template_app_api.h
templates/template_app/src/: template_app.c  template_app.cpp
templates/template_lib/: CMakeLists.txt
templates/template_lib/include/template/: template_api.h  template_impl.h
templates/template_lib/src/: template_impl.c
tests/: CMakeLists.txt  test_array.c  test_broker.c  test_buff.c  test_buff_cpp.cpp  test_cpp.cpp  test_crc.c  test_hash.c  test_heap.c  test_la.c  test_log.c  test_map.c  test_math.c  test_memory.c  test_mtx.c  test_pointer.c  test_queue.c  test_sb.c  test_sch.c  test_sm.c  test_stack.c  test_string.c  test_template.c  test_time.c
tests/posix/: test_table.c
vscode-extension/: .gitignore  .vscodeignore  README.md  jest-esm-to-cjs.cjs  jest.config.js  package-lock.json  package.json  software-development-plan.md  stryker.config.json  traceability-matrix.md  tsconfig.json
(+340 files in other folders)
