# Create the library (update the source files as needed)
set(JUNO_TEST_DIR ${CMAKE_SOURCE_DIR}/tests)
add_executable(test_memory ${JUNO_TEST_DIR}/test_memory.c)
include_directories(${CMAKE_SOURCE_DIR}/tests ${CMAKE_SOURCE_DIR}/inc)
target_link_libraries(test_memory ${PROJECT_NAME} unity)
add_test(test_memory test_memory)
